<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/biriyaniwashedout"
    android:orientation="vertical"
    tools:context="com.example.shahalam.messmealcalculation.MainActivity">

   <LinearLayout
       android:orientation="horizontal"
       android:weightSum="8"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:text="@string/rate"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />

       <EditText
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:gravity="center"
           android:inputType="numberDecimal" />
       <TextView
           android:text="@string/Bua"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />

       <EditText
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:gravity="center"
           android:inputType="numberDecimal" />
       <TextView
           android:text="@string/fuel"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />

       <EditText
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:gravity="center"
           android:inputType="numberDecimal" />
       <TextView
           android:text="@string/others"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />

       <EditText
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:gravity="center"
           android:inputType="numberDecimal" />
   </LinearLayout>


    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="3"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/number_of_meal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/credit"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <Button
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/show_name"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/meal_cost"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/meal_bua"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/meal_bua_fuel"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/total_cost"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/credit"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:text="Manager/Border will pay"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="000.00"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
